<resources>
    <string name="app_name">StudentManagement</string>

    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="prompt_choose_class">Chọn lớp học</string>
    <string name="nav_home">Trang Chủ</string>
    <string name="nav_employee">Quản Lý Nhân Viên</string>
    <string name="nav_student">Quản Lý Học Sinh</string>
    <string name="nav_subject">Quản Lý Môn Học</string>
    <string name="nav_class">Quản Lý Lớp Học</string>


    <string name="nav_myprofile">Trang Cá Nhân</string>
    <string name="nav_logout">Đăng Xuất</string>
    <string name="nav_account">Tài Khoản</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>