<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/nav_home"
            android:icon="@drawable/nav_home"
            />
        <item
            android:id="@+id/nav_employee"
            android:title="@string/nav_employee"
            android:icon="@drawable/employee"
            />
        <item
            android:id="@+id/nav_student"
            android:title="@string/nav_student"
            android:icon="@drawable/student"
            />
        <item
            android:id="@+id/nav_class"
            android:title="@string/nav_class"
            android:icon="@drawable/class__"
            />
        <item
            android:id="@+id/nav_subject"
            android:title="@string/nav_subject"
            android:icon="@drawable/subject"
            />
    </group>

    <item android:title="@string/nav_account">
        <menu>
            <item
                android:id="@+id/nav_myprofile"
                android:title="@string/nav_myprofile"
                android:icon="@drawable/profile"
                />
            <item
                android:id="@+id/nav_logout"
                android:title="@string/nav_logout"
                android:icon="@drawable/logout"
                />
        </menu>

    </item>
</menu>